Added : Tooltip and Broken link

--- a/src/test/resources/config.properties
+++ b/src/test/resources/config.properties
@@ -2,5 +2,5 @@ chromeDriver = F://selenium jars and drivers//drivers//chromedriver//chromedrive
 headless = no
 url = https://www.facebook.com/
 username = amarprajapati99@gmail.com
-password = JayHindJayBharat
+password = Yash_amar0777@
 
